--- a/packages.html
+++ b/packages.html
@@ -107,7 +107,7 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2">
 
           <!-- Card 1 -->
-          <div class="col pb-lg-5">
+          <div class="col pb-5">
             <div class="services card">
               <img src="/media/packages/dubai.jpg" class="card-img-top" alt="...">
               <div class="card-body">
