--- a/booking.html
+++ b/booking.html
@@ -11,6 +11,7 @@
     <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400" rel="stylesheet">
 
@@ -34,7 +35,6 @@
                             <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="packages.html">Packages</a></li>
-                            <li><a href="about.html">Destinations</a></li>
                             <li><a href="insurance.html">Travel Insurance</a></li>
                         </ul>
                     </li>
