--- a/login.html
+++ b/login.html
@@ -30,11 +30,10 @@
 					<li><a href="home.html">Home</a></li>
 					<li><a href="about.html">About Us</a></li>
 
-					<li class="dropdown"><a href="services.html"><span>Services</span> <i
+					<li class="dropdown"><a href="packages.html"><span>Services</span> <i
 								class="bi bi-chevron-down"></i></a>
 						<ul>
-							<li><a href="services.html">Packages</a></li>
-							<li><a href="about.html">Destinations</a></li>
+							<li><a href="packages.html">Packages</a></li>
 							<li><a href="insurance.html">Travel Insurance</a></li>
 						</ul>
 					</li>
