--- a/privacy.html
+++ b/privacy.html
@@ -12,6 +12,7 @@
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
@@ -31,11 +32,11 @@
           <li class="dropdown"><a href="packages.html"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="packages.html">Packages</a></li>
-              <li><a href="about.html">Destinations</a></li>
+              <li><a href="insurance.html">Travel Insurance</a></li>
             </ul>
           </li>
 
-          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="booking.html">Book Now</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li class="dropdown"><a href="login.html"><span>Member</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
