--- a/signup.html
+++ b/signup.html
@@ -30,11 +30,10 @@
 					<li><a href="home.html">Home</a></li>
 					<li><a href="about.html">About Us</a></li>
 
-					<li class="dropdown"><a href="services.html"><span>Services</span> <i
+					<li class="dropdown"><a href="packages.html"><span>Services</span> <i
 								class="bi bi-chevron-down"></i></a>
 						<ul>
-							<li><a href="services.html">Packages</a></li>
-							<li><a href="about.html">Destinations</a></li>
+							<li><a href="packages.html">Packages</a></li>
 							<li><a href="insurance.html">Travel Insurance</a></li>
 						</ul>
 					</li>
@@ -44,7 +43,7 @@
 					<li class="dropdown"><a href="login.html" class="active"><span>Member</span> <i
 								class="bi bi-chevron-down"></i></a>
 						<ul>
-							<li><a href="login.html">Login</a></li>
+							<li><a href="login.html" class="active">Login</a></li>
 							<li><a href="signup.html" class="active">Sign Up</a></li>
 						</ul>
 					</li>
