--- a/booking.html
+++ b/booking.html
@@ -239,7 +239,7 @@
 
                     <div class="col-lg-4 col-md-6 footer-newsletter">
                         <h4>Join Our Newsletter</h4>
-                        <form action="" method="post">
+                        <form>
                             <input type="email" name="email"><input type="submit" value="Subscribe">
                         </form>
                     </div>
