--- a/privacy.html
+++ b/privacy.html
@@ -195,14 +195,14 @@
               <ul>
                 <li><i class="bx bx-chevron-right"></i> <a href="home.html">Home</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="packages.html">Services</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="privacy.html">Privacy policy</a></li>
               </ul>
             </div>
 
             <div class="col-lg-4 col-md-6 footer-newsletter">
               <h4>Join Our Newsletter</h4>
-              <form action="" method="post">
+              <form>
                 <input type="email" name="email"><input type="submit" value="Subscribe">
               </form>
             </div>
